Mise en page + plus possible de commandé une boisson undefined

--- a/WEB/commande/commande.css
+++ b/WEB/commande/commande.css
@@ -19,8 +19,8 @@ body {
     text-align: center;
 }
 
-.btn.btn-lg {
-    margin-top: 15px;
+#send {
+    margin-top: 125px;
     text-align: center;
 }
  .logo {
