--- a/WEB/commande/commande.css
+++ b/WEB/commande/commande.css
@@ -8,18 +8,18 @@ body {
     text-align: center;
 }
 
-.btn{
+.boissons .btn{
     text-align: center;
     margin: 10px;
     font-size: 2em;
     margin-top: 20vh;
 } 
-.boissons {
+.bouttonBoisson {
     font-size: 150%;
     text-align: center;
 }
 
-#send {
+#send1 {
     margin-top: 125px;
     text-align: center;
 }
@@ -27,3 +27,16 @@ body {
      margin-top: 10px;
      text-align: left;
  }
+
+ #noSend {
+    text-align: left;
+}
+
+
+.modal-footer{
+    padding-top: 20px;
+}
+
+.eau {
+    margin-top: 20px;
+}
